# tableau-ext

./: .copier-answers.yml  .flake8  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: test.yml
basic_python_template/: __init__.py
tableau-ext/: README.md  pyproject.toml
tableau-ext/tableau_ext/: __init__.py  extension.py  main.py  pass_through.py  tableau_auth.py  tableau_requests.py  utils.py
tableau_ext/: extension.py  main.py  pass_through.py  tableau_auth.py  tableau_requests.py  utils.py
tests/: test_basic_python_template.py  test_tableau_requests.py  test_utils.py
