[tool.poetry]
name = "basic-python-template"
version = "0.1.0"
description = ""
authors = ["Meltano Team and Contributors"]
maintainers = ["Meltano Team and Contributors"]
readme = "README.md"
homepage = "https://meltano.com"
repository = "https://github.com/meltano/basic-python-template"
license = "Apache 2.0"

packages = [{include = "basic_python_template"}]

[tool.poetry.urls]
"Issue Tracker" = "https://github.com/meltano/basic-python-template/issues"
"Twitter" = "https://twitter.com/meltanodata/"
"Changelog" = "https://github.com/meltano/basic-python-template/blob/main/CHANGELOG.md"
"Slack" = "https://meltano.com/slack"
"Youtube" = "https://www.youtube.com/meltano"

[tool.poetry.dependencies]
python = "<3.11,>=3.7"
requests = "^2.28.2"
types-requests = "^2.28.11.15"

[tool.poetry.group.dev.dependencies]
# Many dev deps (e.g. linters) should be managed by pre-commit. This gives them
# their own virtual environment where they won't conflict with anything other
# deps. See: `.pre-commit-config.yaml`.
pre-commit = "^2.20.0"
pytest = "^7.1"

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "basic_python_template"

[tool.mypy]
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
exclude = "tests"

[tool.pytest.ini_options]
addopts = "-ra"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
